src/main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-redis-websocket-service
spec:
  selector:
    app: spring-redis-websocket
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
